Исправлены стили